Fix mem leaks in ManualDeviceAdder and do some cleanup.

For 2.0

BUG: 141036

svn path=/trunk/extragear/multimedia/amarok/; revision=629249